--- a/package.json
+++ b/package.json
@@ -1,38 +1,36 @@
 {
-  "name": "guppy-farm",
+  "name": "onepeckerstudio",
   "version": "1.0.0",
   "private": true,
-  "author": "Guppy-Team",
+  "author": "Onepecker-Team",
   "description": "React version of Material Kit 2 by Creative Tim",
-  "bugs": {
-    "url": "https://github.com/creativetimofficial/ct-material-kit-react/issues"
-  },
+
   "engines": {
     "node": "14 || 15 || 16",
     "npm": ">=6"
   },
   "dependencies": {
-    "@emotion/cache": "11.4.0",
-    "@emotion/react": "11.4.1",
-    "@emotion/styled": "11.3.0",
-    "@mui/icons-material": "5.2.0",
-    "@mui/material": "5.2.0",
-    "@mui/styled-engine": "5.2.0",
-    "@testing-library/jest-dom": "5.11.4",
-    "@testing-library/react": "11.1.0",
-    "@testing-library/user-event": "12.1.10",
-    "chroma-js": "2.1.2",
-    "flatpickr": "4.6.9",
-    "prop-types": "15.7.2",
+    "@emotion/cache": "11.10.7",
+    "@emotion/react": "11.10.6",
+    "@emotion/styled": "11.10.6",
+    "@mui/icons-material": "5.11.16",
+    "@mui/material": "5.12.0",
+    "@mui/styled-engine": "5.12.0",
+    "@testing-library/jest-dom": "5.16.5",
+    "@testing-library/react": "14.0.0",
+    "@testing-library/user-event": "14.4.3",
+    "chroma-js": "2.4.2",
+    "flatpickr": "4.6.13",
+    "prop-types": "15.8.1",
     "react": "17.0.2",
-    "react-copy-to-clipboard": "5.0.4",
-    "react-countup": "6.1.0",
+    "react-copy-to-clipboard": "5.1.0",
+    "react-countup": "6.4.2",
     "react-dom": "17.0.2",
-    "react-flatpickr": "3.10.7",
-    "react-router-dom": "6.0.2",
-    "react-scripts": "4.0.3",
-    "react-syntax-highlighter": "15.4.5",
-    "web-vitals": "1.0.1"
+    "react-flatpickr": "3.10.13",
+    "react-router-dom": "6.10.0",
+    "react-scripts": "5.0.1",
+    "react-syntax-highlighter": "15.5.0",
+    "web-vitals": "3.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
