--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,16 +18,16 @@
       {
         "endOfLine": "auto"
       }
-    ],
-    "react/react-in-jsx-scope": "off",
-    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
-    "react/jsx-props-no-spreading": [
-      1,
-      {
-        "custom": "ignore"
-      }
-    ],
-    "react/jsx-curly-spacing": [2, "never"]
+    ]
+    // "react/react-in-jsx-scope": "off",
+    // "react/jsx-filename-extension": [1, { "extensions": [".tsx",".js", ".jsx"] }],
+    // "react/jsx-props-no-spreading": [
+    //   1,
+    //   {
+    //     "custom": "ignore"
+    //   }
+    // ],
+    // "react/jsx-curly-spacing": [2, "never"]
   },
   "settings": { "import/resolver": { "node": { "paths": ["src"] } } }
 }
