update content structure

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Guppy Farm",
-  "name": "Guppy",
+  "short_name": "ONE PECKER STUDIO",
+  "name": "ONE PECKER",
   "icons": [
     {
       "src": "favicon.png",
