--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,7 +3,7 @@
         "browser": true,
         "es2021": true
     },
-    "extends": ["prettier", "plugin:import/recommended"],
+    "extends": ["prettier"],
     "parserOptions": {
         "ecmaFeatures": {
             "jsx": true
